I have updated the pseudo code for this slideshow so that it better fits the user screen, the code should also be a little more organized. -S.A.M.

--- a/AV/Development/KMP_Slideshow.html
+++ b/AV/Development/KMP_Slideshow.html
@@ -63,11 +63,11 @@
     kmp_slideshow.umsg("First we have the Master string (indexed [0-n]), the Sub string (indexed [0-m]) and the alignment array for the Sub string.");
 
     kmp_slideshow.step();
-    kmp_slideshow.umsg("We can now take a look at the pseudo-code and notice a few key variables... m, which will default to 0, s, which will default to 0, and also note that our strings are called master and sub, and the alignment array is calle align.");
+    kmp_slideshow.umsg("We can now take a look at the pseudo-code and notice a few key variables... m, which will default to 0, s, which will default to 0, and also note that our strings are called master and sub, and the alignment array is called align.");
     /*
         Setting up the two variables and the pseudo code used throughout the slideshow.
     */
-    var kmp_pseudo = kmp_slideshow.code("input: master string, sub string, align array\nm = 0\ns = 0\nwhile((s < sub.length) and (sub.length - s <= master.length - m)):\n\tif(master[m] == sub[s]):\n\t\tm++\n\t\ts++\n\telse if(s == 0):\n\t\tm++\n\telse:\n\t\ts = align[s]\nif(s == sub.length):\n\treturn m - sub.length\nelse \n\treturn -1", {before: master_label});
+    var kmp_pseudo = kmp_slideshow.code("input: master string, sub string, align array\nm = 0\ns = 0\nwhile((s < sub.length) and (sub.length - s <= master.length - m)):\n\tif(master[m] == sub[s]): m++, s++\n\telse if(s == 0): m++\n\telse: s = align[s]\nif(s == sub.length): return m - sub.length\nelse: return -1", {before: master_label});
     var m = kmp_slideshow.variable(["0"],{visible: true, label: "m = ", left: "150px", bottom: "460px"});
     var s = kmp_slideshow.variable(["0"], {visible: true, label: "s = ", left: "150px", bottom: "430px"});
 
@@ -76,33 +76,34 @@
 
 
     kmp_slideshow.step();
+    kmp_slideshow.umsg("We notice that the first characters of each string (x and a) do not match...");    
     sub.css(0, {"background-color": "red"});
     master.css(0, {"background-color": "red"});
-    kmp_slideshow.umsg("We notice that the first characters of each string (x and a) do not match...");
+
 
     kmp_slideshow.step();
+    kmp_slideshow.umsg("Because there is a mismatch immediately we increment the pointer to the current location in the master string to one spot ahead so that we are comparing substring[0] to master[1], in other words we enter the second if statement (since s == 0) and increment m by 1.");    
     sub.css(0, {"background-color": "white"});
     master.css(0, {"background-color": "white"});
     for(var i=sub.size()-1;i>0;i--){
       sub.value(i, sub.value(i-1));
     }
     sub.value(0, ' ');
-
     for(var x = align.size()-1; x > 0; x--){
       align.value(x, align.value(x-1));
     }
     align.value(0, ' ');
-    kmp_slideshow.umsg("Because there is a mismatch immediately we increment the pointer to the current location in the master string to one spot ahead so that we are comparing substring[0] to master[1], in other words we enter the second if statement (since s == 0) and increment m by 1.");
-    kmp_pseudo.setCurrentLine(8);
+    kmp_pseudo.setCurrentLine(5);
     m.value("1");
 
     kmp_slideshow.step();
+    kmp_slideshow.umsg("We jump back to the beginning of the loop and notice that, once again, the first characters of each string (y and a) do not match...");    
     sub.css(1, {"background-color": "red"});
     master.css(1, {"background-color": "red"});
-    kmp_slideshow.umsg("We jump back to the beginning of the loop and notice that, once again, the first characters of each string (y and a) do not match...");
     kmp_pseudo.setCurrentLine(4);
 
     kmp_slideshow.step();
+    kmp_slideshow.umsg("Because there is a mismatch immediately we increment the pointer to the current location in the master string to one spot ahead so that we are comparing the substring[0] to master[2], this done by again entering the if statement on line 8 and setting m to m+1.");    
     sub.css(1, {"background-color": "white"});
     master.css(1, {"background-color": "white"});
     for(i=sub.size()-1;i>0;i--){
@@ -111,10 +112,7 @@
     for(i = align.size()-1; i > 0; i--){
       align.value(i, align.value(i-1));
     }
-
-
-    kmp_slideshow.umsg("Because there is a mismatch immediately we increment the pointer to the current location in the master string to one spot ahead so that we are comparing the substring[0] to master[2], this done by again entering the if statement on line 8 and setting m to m+1.");
-    kmp_pseudo.setCurrentLine(8);
+    kmp_pseudo.setCurrentLine(5);
     m.value("2");  
 
     kmp_slideshow.step();
@@ -126,21 +124,21 @@
     sub.highlight([2,3,4,5]);
 
     kmp_slideshow.step();
+    kmp_slideshow.umsg("Now we can have some fun. We can now observe here that sub[0-3] match up with master [2-5]. Then everything is ruined when we realize that sub[4] (a) doesn't match up with master[6] (c)...");    
     sub.css(6, {"background-color": "red"});
     master.css(6, {"background-color": "red"});
-    kmp_slideshow.umsg("Now we can have some fun. We can now observe here that sub[0-3] match up with master [2-5]. Then everything is ruined when we realize that sub[4] (a) doesn't match up with master[6] (c)...");
 
     kmp_slideshow.step();
     kmp_slideshow.umsg("We can't enter the second if statement because s != 0, so we have to enter the else.");
-    kmp_pseudo.setCurrentLine(7);
+    kmp_pseudo.setCurrentLine(6);
 
     kmp_slideshow.step();
+    kmp_slideshow.umsg("We now utilize the alignment array to figure out what index in the our substring we can jump to. We note that align[s] (align[4]) is 2, that means we shift our substring over so that the current index in the master string is aligned with sub[2]. Then this also resets our s value to 2.");    
     align.highlight(6);
-    kmp_pseudo.setCurrentLine(10);
-    kmp_slideshow.umsg("We now utilize the alignment array to figure out what index in the our substring we can jump to. We note that align[s] (align[4]) is 2, that means we shift our substring over so that the current index in the master string is aligned with sub[2]. Then this also resets our s value to 2.");
     s.value("2");
 
     kmp_slideshow.step();
+    kmp_slideshow.umsg("Note now that we still don't have a match at master[m] and sub[s] (master[6] != sub[2]).");    
     kmp_pseudo.setCurrentLine(4);
     align.unhighlight(6);
     master.unhighlight([2,3,4,5]);
@@ -151,15 +149,15 @@
     for(i = align.size()-1; i > 1; i--){
       align.value(i, align.value(i-2));
     }
-    kmp_slideshow.umsg("Note now that we still don't have a match at master[m] and sub[s] (master[6] != sub[2]).");
 
     kmp_slideshow.step();
+    kmp_slideshow.umsg("s is still > 0 so we head down to our else statement and reassign s to align[s] (align[2]) which is just 0.");    
     align.highlight(6);
-    kmp_pseudo.setCurrentLine(10);
-    kmp_slideshow.umsg("s is still > 0 so we head down to our else statement and reassign s to align[s] (align[2]) which is just 0.");
+    kmp_pseudo.setCurrentLine(6);
     s.value("0");
 
     kmp_slideshow.step();
+    kmp_slideshow.umsg("Now we end up back in the same situation after the jump, the mistmatch occurs at master[6] and sub[0] now.");    
     kmp_pseudo.setCurrentLine(4);    
     align.unhighlight(6);
     master.unhighlight([4,5]);
@@ -170,14 +168,15 @@
     for(i = align.size()-1; i > 1; i--){
       align.value(i, align.value(i-2));
     }
-    kmp_slideshow.umsg("Now we end up back in the same situation after the jump, the mistmatch occurs at master[6] and sub[0] now.");
 
 
-    kmp_slideshow.step();
+    kmp_slideshow.step();    
     kmp_slideshow.umsg("We enter the second if statement this time because s == 0, so we just increment m by 1...");
     m.value("7");
-    kmp_pseudo.setCurrentLine(8);
+    kmp_pseudo.setCurrentLine(5);
+
     kmp_slideshow.step();
+    kmp_slideshow.umsg("We are now comparing master[7] to sub[0].");    
     sub.css(6, {"background-color": "white"});
     master.css(6, {"background-color": "white"});    
     for(i=sub.size()-1;i>0;i--){
@@ -186,16 +185,15 @@
     for(i = align.size()-1; i > 0; i--){
       align.value(i, align.value(i-1));
     }   
-    kmp_slideshow.umsg("We are now comparing master[7] to sub[0].");
     kmp_pseudo.setCurrentLine(4);
 
 
     kmp_slideshow.step();
+    kmp_slideshow.umsg("We get to travel through our loop successfully incrementing m and s 8 times now because all of the characters in master[7-14] and sub[0-7] matched one another, but we will notice a mismatch at master[15] and sub[8]...");
     master.highlight([7,8,9,10,11,12,13,14]);
     sub.highlight([7,8,9,10,11,12,13,14]);
     sub.css(15, {"background-color": "red"});
     master.css(15, {"background-color": "red"});      
-    kmp_slideshow.umsg("We get to travel through our loop successfully incrementing m and s 8 times now because all of the characters in master[7-14] and sub[0-7] matched one another, but we will notice a mismatch at master[15] and sub[8]...");
     m.value("15");
     s.value("8");
 
@@ -203,18 +201,17 @@
 
     kmp_slideshow.step();
     kmp_slideshow.umsg("We enter our else statement this time because we know s != 0 and the current characters don't match.");
-    kmp_pseudo.setCurrentLine(9);
+    kmp_pseudo.setCurrentLine(6);
 
 
     kmp_slideshow.step();
-
-    align.highlight(15);
     kmp_slideshow.umsg("We now get to see why KMP is such a cool algorithm. We look back at our alignment array and see that at align[s] (align[8]) we get to reassign s to 1!");
     s.value("1");
-    kmp_pseudo.setCurrentLine(10);
+    align.highlight(15);
 
 
     kmp_slideshow.step();
+    kmp_slideshow.umsg("Wow! How Exciting! We just skipped over 6 comparisons that the naive method would have had to make!");
     master.unhighlight();
     sub.unhighlight();
     align.unhighlight();
@@ -226,36 +223,36 @@
     for(i = align.size()-1; i > 6; i--){
       align.value(i, align.value(i-7));
     }
-    kmp_slideshow.umsg("Wow! How Exciting! We just skipped over 6 comparisons that the naive method would have had to make!");
 
 
     kmp_slideshow.step();
+    kmp_slideshow.umsg("We know take a look at master[15] and sub[1] which don't match.");    
     sub.css(15, {"background-color": "red"});
     master.css(15, {"background-color": "red"});  
     align.highlight(15);
-    kmp_slideshow.umsg("We know take a look at master[15] and sub[1] which don't match.");
     kmp_pseudo.setCurrentLine(4);
 
     kmp_slideshow.step();
     kmp_slideshow.umsg("We go back into our else statement because s != 0 and we reset s to align[s] (align[1]) which is 0.");
-    kmp_pseudo.setCurrentLine(10);
+    kmp_pseudo.setCurrentLine(6);
     s.value("0");
 
 
     kmp_slideshow.step();
+    kmp_slideshow.umsg("Right away our new alignment doesn't match and s == 0 so we increment m by 1 to compare the next spot in the master string.");
     for(i=sub.size()-1;i>0;i--){
       sub.value(i, sub.value(i-1));
     }
     for(i = align.size()-1; i > 0; i--){
       align.value(i, align.value(i-1));
     }
-    kmp_slideshow.umsg("Right away our new alignment doesn't match and s == 0 so we increment m by 1 to compare the next spot in the master string.");
     m.value("16");
     align.unhighlight(15);
-    kmp_pseudo.setCurrentLine(8);
+    kmp_pseudo.setCurrentLine(5);
 
 
     kmp_slideshow.step();
+    kmp_slideshow.umsg("We move through the next 9 characters easily, entering our first if statement every time and increasing m and s by a total of 8 after 8 iterations");
     for(i=sub.size()-1;i>0;i--){
       sub.value(i, sub.value(i-1));
       align.value(i, align.value(i-1));
@@ -264,7 +261,6 @@
       sub.highlight(i);
       master.highlight(i);      
     }
-    kmp_slideshow.umsg("We move through the next 9 characters easily, entering our first if statement every time and increasing m and s by a total of 8 after 8 iterations");
     s.value("8");
     m.value("24");
     kmp_pseudo.setCurrentLine(4);
@@ -279,11 +275,10 @@
 
     kmp_slideshow.step();
     kmp_slideshow.umsg("we also not that s == sub.length so we enter our if statement on line 12.");
-    kmp_pseudo.setCurrentLine(11);
+    kmp_pseudo.setCurrentLine(7);
 
     kmp_slideshow.step();
     kmp_slideshow.umsg("We return the value m (24) - sub.length (9), so we know that our match occurs at index 16 of the master")
-    kmp_pseudo.setCurrentLine(12);
 
     //step
     kmp_slideshow.step();
