Create separate list and visual list config files. Update instructions for array list exercises

--- a/Exercises/Development/listArrayDeletion.html
+++ b/Exercises/Development/listArrayDeletion.html
@@ -160,10 +160,15 @@ var checkAnswer = function (arr_size) {
 
   <div class="problems">
     <div> <!-- Supresses answer box -->
-      <p class="problem">Your task in this exercise is to show the behavior of Array-Based List Deletion.
+      <p class="problem">Your task in this exercise is to show the
+        behavior for array-based list deletion.
         In the array displayed below, the "current" position is <b><var>insert_pos</var></b>.</p>
       <div class="question">
-        <p> Perform the Array-Based List Deletion to remove the "current", then shift all elements after "current" one position to the left.</p>
+        <p>Click on a value to highlight it, then click on the "Delete
+           value" button to delete the highlighted element. Move other
+           elements in the array as appropriate by first clicking on
+           the element that you want to move (to highlight it), then
+           clicking on where it goes.</p>
         <input id="reset" type="button" value="Reset" />	
 		<input id="delete" type="button" value="Delete value" />
         <div id="jsav"></div>
