--- a/Exercises/Development/listArrayDeletion.html
+++ b/Exercises/Development/listArrayDeletion.html
@@ -33,62 +33,38 @@ Written by Junyang Chen and Cliff Shaffer
 <body>
 
 <script>
-var
-	jsav,           // The JSAV object
-	answerArr = [], // The (internal) array that stores the correct answer
-	cloneArr = [],  // A copy of the (internal) array at the start of the exercise for reset
-	jsavArr,        // The array that the user manipulates (JSAV object)
-	delPosision,    // deletion location
-	delValue,       // deletion value
-	deleteEnable,   // Boolean: Tells us if allowed to perform deletion when click on jsav array
-	userInput,      // Boolean: Tells us if user ever did anything
-	selected_index; // Position that has been selected by user for swap
-
+var	jsav,           // The JSAV object
+  answerArr = [], // The (internal) array that stores the correct answer
+  cloneArr = [],  // A copy of the (internal) array at the start of the exercise for reset
+  jsavArr,        // The array that the user manipulates (JSAV object)
+  delPosision,    // deletion location
+  delValue,       // deletion value
+  userInput,      // Boolean: Tells us if user ever did anything
+  selected_index; // Position that has been selected by user for swap
 
 // Click event handler on the array
 var clickHandler = function (index, e) {
-	if(deleteEnable === false)
-		clickSwap(index);
-	else
-		clickDelete(index);
+  if (selected_index === -1) { // if nothing currently selected
+	jsavArr.css(index, {"font-size": "130%"});
+	selected_index = index;
+	jsavArr.highlight(index);
+  } else {
+ 	jsavArr.swap(selected_index, index);
+	jsavArr.css(index, {"font-size": "100%"});
+	jsavArr.unhighlight(index);
+	selected_index = -1;  // Reset to nothing selected
+  }
+  userInput = true;
 };
-
-// Click event on the array for Swapping values
-var clickSwap = function(index){	
-	if (selected_index === -1) { // if nothing currently selected
-		jsavArr.css(index, {"font-size": "130%"});
-		selected_index = index;
-		jsavArr.highlight(index);
-	} else {
-		jsavArr.swap(selected_index, index);
-		jsavArr.css(index, {"font-size": "100%"});
-		jsavArr.unhighlight(index);
-		selected_index = -1;  // Reset to nothing selected
-	}
-	userInput = true;
-}
-
-// for deleting value on click location of the array
-var clickDelete = function(index){	
-	if(jsavArr.value(index) === "")
-	{
-		alert("This element is already empty");
-		deleteEnable = false;
-		return;
-	}
-	jsavArr.value(index, "");
-	deleteEnable = false;
-    userInput = true;
-}
 
 // reset function definition
 var f_reset = function () {
-	jsavArr.clear();
-	// Re-initialize the displayed array object
-	jsavArr = jsav.ds.array(cloneArr, {indexed: true, center: false});
-	jsavArr.css({top:50});
-	jsavArr.click(clickHandler); // Rebind click handler after reset
-	userInput = false;
+  jsavArr.clear();
+  // Re-initialize the displayed array object
+  jsavArr = jsav.ds.array(cloneArr, {indexed: true, center: false});
+  jsavArr.css({top:50});
+  jsavArr.click(clickHandler); // Rebind click handler after reset
+  userInput = false;
 };
 
 // Initialise the exercise
@@ -97,7 +73,6 @@ var initJSAV = function (arr_size, insertPos, insertValue) {
   var emptyArr = ["","","",""];
   userInput = false;
   selected_index = -1;
-  deleteEnable = false;
   delPosision = insertPos;
   delValue = insertValue;
   
@@ -125,15 +100,17 @@ var initJSAV = function (arr_size, insertPos, insertValue) {
   // Bind the clickHandler to handle click events on the array
   jsavArr.click(clickHandler);
   // Set up handler for reset button
-   $("#delete").click(
-    function () {
-	  deleteEnable = true;	  
-	jsavArr.unhighlight(selected_index);	
-	jsavArr.css(selected_index, {"font-size": "100%"});	
-	//this.disabled = 'true';
-	selected_index = -1;
-    userInput = true;
-    });
+  $("#delete").click(function (){
+	if(selected_index !== -1){
+	  jsavArr.unhighlight(selected_index);	
+	  jsavArr.css(selected_index, {"font-size": "100%"});
+	  if(jsavArr.value(selected_index) != "")
+	    jsavArr.css(selected_index, { "background-color": "#ddd" });
+	  jsavArr.value(selected_index, "");
+	  selected_index = -1;
+      userInput = true;
+	}
+  });
 
   $("#reset").click(function () { f_reset(); });
 };
