Found a fix for right now for the issue with displaying the arrays properly.

--- a/Exercises/Development/KMP_EX_PRO.html
+++ b/Exercises/Development/KMP_EX_PRO.html
@@ -14,7 +14,7 @@
   height: 480px;
 }
 
-#profArray {
+#arrays {
   margin-top: -15px;
   margin-bottom: 20px
 }
@@ -58,7 +58,6 @@
     <input type="button" id="next" name="next"
     data-desc="Indicates user is done with the current increment"
     value="Next" />
-
   </form>
 </div> <!-- container -->
 
